8146709: AArch64: Incorrect use of ADRP for byte_map_base

Reviewed-by: roland